<resources>
    <string name="app_name">GameSDK</string>
    <string name="action_settings">Settings</string>
    <string name="hello_hy">Login</string>
    <string name="hy_notify_no">hynotify</string>
    <string name="register_name_digits">.!@#%*_0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="account_login">账号登录</string>
    <string name="hy_done">完成</string>
    <string name="hy_no_sd_card_info">木有sd卡，请插入后再试</string>
    <string name="hy_sd_card_full_info">木有sd卡，请插入后再试</string>
    <string name="hy_text_verify_wrong">验证码错误</string>
    <string name="hy_text_hint_verify">验证码</string>
    <string name="hy_text_hint_pwd">密码</string>
    <string name="hy_text_hint_new_pwd">新密码</string>
    <string name="hy_btn_text_reset_pwd">重置密码并进入游戏</string>
    <string name="hy_text_prompt_user_not_exist">帐号不存在</string>
    <string name="hy_text_hint_phone_or_username">手机号或用户名</string>
    <string name="hy_btn_text_yzsf">验证身份</string>
    <string name="hy_btn_text_xczs">下次再说</string>
    <string name="hy_btn_text_wcbj">立即绑定</string>
    <string name="hy_binding_phone">您还未绑定手机（点击绑定）</string>
    <string name="hy_to_binding_phone">绑定手机号</string>
    <string name="hy_text_0.0">0.0</string>
    <string name="hy_text_jbye">优豆余额</string>
    <string name="hy_text_logout">注销</string>
    <string name="hy_modify_pwd">修改密码</string>
    <string name="hy_text_czjb">充值优豆</string>
    <string name="hy_text_sxje">刷新余额</string>
    <string name="hy_text_10yuan">10元</string>
    <string name="hy_text_20yuan">20元</string>
    <string name="hy_text_30yuan">30元</string>
    <string name="hy_text_50yuan">50元</string>
    <string name="hy_text_100yuan">100元</string>
    <string name="hy_text_300yuan">300元</string>
    <string name="hy_text_hint_qtje">其他金额（元）</string>
    <string name="hy_text_prompt_dhbl1bi1">优豆和人民币兑换比例为 1：1</string>
    <string name="hy_text_jinbitihuan_tip">*金币已等值替换成优豆，请放心使用</string>
    <string name="hy_text_back_to_game">返回游戏</string>
    <string name="hy_text_a_xyfwxy">查看汇享合一虚拟社区币服务协议</string>
    <string name="hy_text_ljcz">立即充值</string>
    <string name="hy_text_prompt_yd_lt_hyt">支持：移动神州行 联通一卡充 电信一卡通</string>
    <string name="hy_text_mzyuan">面值(元):</string>
    <string name="hy_text_hint_card_no">卡号</string>
    <string name="hy_text_ywmc_stzf_djmc">业务名称：合乐智趣支付。道具名称：</string>
    <string name="hy_text_fwtgs_hy">服务提供商：合乐智趣</string>
    <string name="hy_text_prompt_buy_msg">将通过手机话费支付方式购买，可能会收到计费通知短信。</string>
    <string name="hy_text_hygame_pay">支付</string>
    <string name="hy_text_video_setting_upload">是否自动上传录制视频：</string>
    <string name="hy_text_video_setting_record">是否录制声音：</string>
    <string name="hy_text_video_setting_network">是否在2G/3G/4G网络下上传视频：</string>
    <string name="hy_text_video_setting_definition">清晰度选择：</string>
    <string name="hy_text_video_setting_superclear">超清</string>
    <string name="hy_text_video_setting_highdefinition">高清</string>
    <string name="hy_text_video_setting_standardfinition">标清</string>
    <string name="hy_button_video_setting_text">保 存</string>
    <string name="hy_text_hygame_paydetails">交易明细</string>
    <string name="hy_text_hygame_videoSetting">录屏设置</string>
    <string name="hy_text_viplist_title">会员特权礼包</string>
    <string name="hy_text_msg_title">消息中心</string>
    <string name="hy_text_alipay">支付宝支付</string>
    <string name="hy_text_uniconpay">银联支付</string>
    <string name="hy_text_hygame_announcement_title">公告</string>
    <string name="hy_text_000.00">0.00元</string>
    <string name="hy_text_time">2015年8月12日</string>
    <string name="hy_text_user_maohao">用户:</string>
    <string name="hy_text_null">null</string>
    <string name="hy_text_good_maohao">商品:</string>
    <string name="hy_text_0xingzuan">0星钻</string>
    <string name="hy_text_a_qzfbfk">去支付宝付款</string>
    <string name="hy_text_prompt_xzmzxtczk">选择面值相同的充值卡选项，否则会导致换取失败和充值卡作废。\n支付完成后余下金额将自动充入合乐智趣优豆。</string>
    <string name="hy_text_prompt_ljgd">了解更多</string>
    <string name="hy_text_hint_yyzczh">用于注册帐号</string>
    <string name="hy_btn_text_yzsf_1">验证身份</string>
    <string name="hy_text_nhyyy">您也可以用</string>
    <string name="hy_text_notice">将发送短信进行验证</string>
    <string name="hy_text_a_yhmzc">用户名注册</string>
    <string name="hy_text_btn_hy_user_login">点击登录</string>
    <string name="hy_text_hint_user_name">请输入3~20位非纯数字</string>
    <string name="hy_text_hint_yfpzh_modify">本账户是系统预分配，可进行修改</string>
    <string name="hy_text_hint_csmm_reg">请输入5—16位密码</string>
    <string name="hy_text_a_zcxy">用户注册协议</string>
    <string name="hy_text_btn_ljzc">立即注册</string>
    <string name="hy_text_btn_done">完成注册</string>
    <string name="hy_text_btn_login_in">登录并进入游戏</string>
    <string name="hy_text_version_title">版本更新</string>
    <string name="hy_text_quit_title">退出</string>
    <string name="hy_text_btn_qx">取消</string>
    <string name="hy_text_btn_gx">更新</string>
    <string name="hy_text_btn_quit">退出</string>
    <string name="hy_text_wrong_username_pwd">用户名或密码错误</string>
    <string name="hy_text_hint_user_phone_email">手机号/用户名</string>
    <string name="hy_text_btn_yjzc">快速注册</string>
    <string name="hy_text_btn_ljdl">进入游戏</string>
    <string name="hy_text_fsdxyz">将发送短信验证,查看</string>
    <string name="hy_text_yhzcxy">用户注册协议</string>
    <string name="hy_text_a_wjmm">忘记密码</string>
    <string name="hy_text_zzxz">正在下载</string>
    <string name="hy_text_bf0">0%</string>
    <string name="hy_text_btn_anzhuang">安装</string>
    <string name="hy_text_hyyx_user_title">合乐智趣游戏用户登录</string>
    <string name="hy_text_consume_benefit_get_title">兑换宝贝</string>
    <string name="hy_text_consume_benefit_get_button">兑换</string>
    <string name="hy_text_hint_qsrsjh">请输入手机号码</string>
    <string name="hy_text_hint_qsrdxyzm">验证码</string>
    <string name="hy_text_hint_zsxm">真实姓名</string>
    <string name="hy_text_hint_lxdh">联系电话</string>
    <string name="hy_text_prompt_bdsj">注：绑定手机增强付费安全，可找回密码</string>
    <string name="hy_text_hyyx_title">合乐智趣游戏</string>
    <string name="hy_text_jiahao">+</string>
    <string name="hy_text_jianhao">-</string>
    <string name="hy_text_mini_bt">标题</string>
    <string name="hy_text_dqsymmaqsrf">当前使用密码安全输入法</string>
    <string name="hy_image_bannar_content_des">bannar</string>
    <string name="hy_text_a">a</string>
    <string name="hy_text_b">b</string>
    <string name="hy_text_c">c</string>
    <string name="hy_text_d">d</string>
    <string name="hy_text_e">e</string>
    <string name="hy_text_f">f</string>
    <string name="hy_text_g">g</string>
    <string name="hy_text_h">h</string>
    <string name="hy_text_i">i</string>
    <string name="hy_text_j">j</string>
    <string name="hy_text_k">k</string>
    <string name="hy_text_l">l</string>
    <string name="hy_text_m">m</string>
    <string name="hy_text_n">n</string>
    <string name="hy_text_o">o</string>
    <string name="hy_text_p">p</string>
    <string name="hy_text_q">q</string>
    <string name="hy_text_r">r</string>
    <string name="hy_text_s">s</string>
    <string name="hy_text_t">t</string>
    <string name="hy_text_u">u</string>
    <string name="hy_text_v">v</string>
    <string name="hy_text_w">w</string>
    <string name="hy_text_x">x</string>
    <string name="hy_text_y">y</string>
    <string name="hy_text_z">z</string>
    <string name="hy_text_A">A</string>
    <string name="hy_text_B">B</string>
    <string name="hy_text_C">C</string>
    <string name="hy_text_D">D</string>
    <string name="hy_text_E">E</string>
    <string name="hy_text_F">F</string>
    <string name="hy_text_G">G</string>
    <string name="hy_text_H">H</string>
    <string name="hy_text_I">I</string>
    <string name="hy_text_J">J</string>
    <string name="hy_text_K">K</string>
    <string name="hy_text_L">L</string>
    <string name="hy_text_M">M</string>
    <string name="hy_text_N">N</string>
    <string name="hy_text_O">O</string>
    <string name="hy_text_P">P</string>
    <string name="hy_text_Q">Q</string>
    <string name="hy_text_R">R</string>
    <string name="hy_text_S">S</string>
    <string name="hy_text_T">T</string>
    <string name="hy_text_U">U</string>
    <string name="hy_text_V">V</string>
    <string name="hy_text_W">W</string>
    <string name="hy_text_X">X</string>
    <string name="hy_text_Y">Y</string>
    <string name="hy_text_Z">Z</string>
    <string name="hy_text_1">1</string>
    <string name="hy_text_2">2</string>
    <string name="hy_text_3">3</string>
    <string name="hy_text_4">4</string>
    <string name="hy_text_5">5</string>
    <string name="hy_text_6">6</string>
    <string name="hy_text_7">7</string>
    <string name="hy_text_8">8</string>
    <string name="hy_text_9">9</string>
    <string name="hy_text_0">0</string>
    <string name="hy_text_athao"> \@ </string>
    <string name="hy_text_danmeiyuan"> $ </string>
    <string name="hy_text_jinghao"> # </string>
    <string name="hy_text_baifenhao"> % </string>
    <string name="hy_text_anpei">&amp;</string>
    <string name="hy_text_xinghao"> * </string>
    <string name="hy_text_zuokuohu"> ( </string>
    <string name="hy_text_youkuohu"> ) </string>
    <string name="hy_text_tanhao">!</string>
    <string name="hy_text_quot">"</string>
    <string name="hy_text_apos"> \' </string>
    <string name="hy_text_maohao">:</string>
    <string name="hy_text_fenhao">;</string>
    <string name="hy_text_zuoxiegang">/</string>
    <string name="hy_text_bolang">~</string>
    <string name="hy_text_shugang">|</string>
    <string name="hy_text_chenghao">×</string>
    <string name="hy_text_chuhao">÷</string>
    <string name="hy_text_denghao">=</string>
    <string name="hy_text_lt">&amp;lt;</string>
    <string name="hy_text_youjiantou">&amp;gt;</string>
    <string name="hy_text_zuodakuohu">{</string>
    <string name="hy_text_youdakuohu">}</string>
    <string name="hy_text_qiuhehao">∑</string>
    <string name="hy_text_brs1">§</string>
    <string name="hy_text_qianfenhao">‰</string>
    <string name="hy_text_rhao">￥ </string>
    <string name="hy_text_aerfa">α</string>
    <string name="hy_text_beita">β</string>
    <string name="hy_text_gama">γ</string>
    <string name="hy_text_xigema">℃ </string>
    <string name="hy_text_zuozhongkuohu">[</string>
    <string name="hy_text_youzhongkuohu">]</string>
    <string name="hy_text_xiahuaxian"> _ </string>
    <string name="hy_text_shangjianhao"> ^ </string>
    <string name="hy_text_jiajianhao">±</string>
    <string name="hy_text_danyinhao">’</string>
    <string name="hy_text_shuangxx"> \\ </string>
    <string name="hy_text_youdanyinhao"> ` </string>
    <string name="hy_text_wenhao"> \?</string>
    <string name="hy_text_123">123</string>
    <string name="hy_text_abc">abc</string>
    <string name="hy_text_douhao">,</string>
    <string name="hy_text_dian">.</string>
    <string name="hy_text_meiyuan2"> $ </string>
    <string name="hy_text_queding">确定</string>
    <string name="hy_text_jiaoyimingxi">交易明细</string>
    <string name="hy_text_rebate_tips">注：以支付成功到账为前提，返利到账过程需要1到2分钟。</string>
    <string name="hy_text_rebate_already">已返利</string>
    <string name="hy_content_description_mini_root">mini_root</string>
    <string name="hy_content_description_mini_linBlocksConpent">mini_linBlocksConpent</string>
    <string name="hy_content_description_mini_ui_input_layout">mini_ui_input_layout</string>
    <string name="hy_content_description_mini_ui_input_content">mini_ui_input_content</string>
    <string name="hy_content_description_uicomponenet">uicomponenet</string>
    <string name="hy_content_description_checkbox_relativelayout">checkbox_relativelayout</string>
    <string name="hy_content_description_checkbox_mini_layout_relativeLayout">mini_layout_relativeLayout</string>
    <string name="hy_pull_to_refresh">下拉可以刷新</string>
    <string name="hy_more">加载中</string>
    <string name="hy_pay_vip_title">您已获得领取会员特权礼包资格</string>
    <string name="hy_pay_vip_prompt">*礼包激活码将在1-2分钟内发放</string>
</resources>