<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:nanlus="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/HY_GameSDK_664PX"
    android:layout_height="wrap_content"
    android:background="@color/hy_hybgColor"
    android:orientation="vertical" >

    <include layout="@layout/hy_title_include" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/hy_title_line" >
    </LinearLayout>
    
    <TextView android:id="@+id/present_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/HY_GameSDK_50PX"
        android:text="@string/hy_more"
        android:textColor="@color/hy_color_consume_benefit_present_name"
        android:textSize="@dimen/HY_GameSDK_30PX"
        android:singleLine="true"
        android:maxLength="16"
        android:layout_marginTop="@dimen/HY_GameSDK_20PX"/>

    <com.heyijoy.gamesdk.widget.EditTextWithErr
        android:id="@+id/et_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/HY_GameSDK_40PX"
        android:layout_marginRight="@dimen/HY_GameSDK_40PX"
        android:layout_marginTop="@dimen/HY_GameSDK_14PX"
        android:contentDescription="@string/hy_text_hint_zsxm"
        android:tag="all#30"
        />

    <com.heyijoy.gamesdk.widget.EditTextWithErr
        android:id="@+id/et_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/HY_GameSDK_40PX"
        android:layout_marginRight="@dimen/HY_GameSDK_40PX"
        android:layout_marginTop="@dimen/HY_GameSDK_36PX"
        android:contentDescription="@string/hy_text_hint_lxdh"
        android:tag="user_phone#11" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="@dimen/HY_GameSDK_300PX"
        android:layout_height="@dimen/HY_GameSDK_88PX"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/HY_GameSDK_32PX"
        android:background="@drawable/hy_btn_blue_selector"
        android:text="@string/hy_text_consume_benefit_get_button"
        android:textColor="@color/hy_white"
        android:textSize="@dimen/HY_GameSDK_32PX" />

</LinearLayout>