<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/hy_pay_sms_content_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/hy_pay_business_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hy_text_ywmc_stzf_djmc"
            android:textColor="#717171"
            android:textSize="@dimen/HY_GameSDK_20PX" />

        <TextView
            android:id="@+id/hy_pay_provider_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hy_text_fwtgs_hy"
            android:textColor="#717171"
            android:textSize="@dimen/HY_GameSDK_20PX" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/HY_GameSDK_20PX" />

        <TextView
            android:id="@+id/hy_pay_declare_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hy_text_prompt_buy_msg"
            android:textColor="#717171"
            android:visibility="gone"
            android:textSize="@dimen/HY_GameSDK_20PX" />
    </LinearLayout>

</LinearLayout>